[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["xuanq"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.0"
pandas = "^2.2.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
